# notetaking_crow_server

./: CMakeLists.txt  index.html  main.cpp
